kiloseq and popcode figures

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -4,7 +4,7 @@
 
 \section{Introduction}
 
-Within coming decades, millions of people will have their genome sequenced. Unfortunately, we have limited ability to interpret personal genomes, each carrying 100-400 rare missense variants1 of which many must currently be classified as “variants of uncertain significance”. For example, gene panel sequencing aimed at identifying germline cancer risk variants in families yielded VUS for the majority of missense variants2.  While functional variants can be predicted via computational tools such as PolyPhen-23 and PROVEAN4, these methods can confidently detect only one third as many disease variants as are detectable by experimental assays5. Unfortunately, experimental assays are either unavailable or economically inviable for most human disease genes. The development of Deep Mutational Scanning (DMS)6,7 is making it possible to produce maps that predict the functional impact of a large fraction of substitutions for at least a subset of residue positions. Recently, Starita and colleagues carried out a DMS screen for the critical RING domain of BRCA18. Despite this progress, no experimental sequence-function map has yet demonstrated high-accuracy scoring of the functional impact of all possible substitutions for any full length protein (see Supplementary Table S1). Thus, the goal of complete, highly accurate DMS maps for full-length proteins remains undemonstrated.
+Within coming decades, millions of people will have their genome sequenced. Unfortunately, we have limited ability to interpret personal genomes, each carrying 100-400 rare missense variants~\cite{the_1000_genomes_project_consortium_global_2015} of which many must currently be classified as “variants of uncertain significance”. For example, gene panel sequencing aimed at identifying germline cancer risk variants in families yielded VUS for the majority of missense variants~\cite{maxwell_evaluation_2016}.  While functional variants can be predicted via computational tools such as PolyPhen-2\cite{adzhubei_method_2010} and PROVEAN~\cite{choi_fast_2012}, these methods can confidently detect only one third as many disease variants as are detectable by experimental assays~\cite{sun_extended_2016}. Unfortunately, experimental assays are either unavailable or economically inviable for most human disease genes. The development of Deep Mutational Scanning (DMS)~\cite{fowler_high-resolution_2010} is making it possible to produce maps that predict the functional impact of a large fraction of substitutions for at least a subset of residue positions. Recently, Starita and colleagues carried out a DMS screen for the critical RING domain of BRCA18~\cite{starita_massively_2015}. Despite this progress, no experimental sequence-function map has yet demonstrated high-accuracy scoring of the functional impact of all possible substitutions for any full length protein (see Table~\ref{table:DMSstudies}). Thus, the goal of complete, highly accurate DMS maps for full-length proteins remains undemonstrated.
 
 Functional complementation can measure the ability of a mutant human protein to rescue the loss of the wild type enzyme (or its ortholog in the case of trans-species complementation)9,10. We have previously found that cell-based functional complementation assays facilitated highly accurate identification of disease variation across a diverse collection of human disease genes5. 
 
@@ -18,16 +18,14 @@ We first describe a variant of the framework called DMS-BarSeq and apply it to t
 
 \subsection{A barcode-based Deep Mutational Scanning strategy}
 
-As an initial test of the overall framework, we first aimed to generate a map of functional missnse variation for UBE2I. For Stage 1 of the DMS framework—mutagenesis—we wished to achieve a relatively even representation of all possible single amino acid substitutions.  Furthermore, we wished to allow multiple mutations per clone, both because this could allow for greater mutational coverage for any given library size, and because it would offer an opportunity to discover intragenic epistatic relationships between variants.  To fulfill these requirements, we developed a mutagenesis protocol (Precision Oligo-Pool based Code Alteration or POPCode) which generates random codon replacements. POPCode scales up a previously-described technique11 in which oligonucleotides carrying a central 3-base degenerate region are hybridized to a uracil-containing wild-type DNA template, with completion of the mutant strand via non-displacing DNA polymerase extension and ligation, followed by degradation of the wild-type template (see Supplementary Methods).  To accomplish mutagenesis across the entire coding region, we designed a tiled collection of oligos (one per codon) and applied POPCode to generate a codon-mutagenized amplicon library for UBE2I.  In parallel, we carried out PCR with oxidized nucleotides 12 to enable deeper representation of amino acid changes achievable from single-nucleotide changes.
+As an initial test of the overall framework, we first aimed to generate a map of functional missnse variation for UBE2I. For Stage 1 of the DMS framework---mutagenesis---we wished to achieve a relatively even representation of all possible single amino acid substitutions.  Furthermore, we wished to allow multiple mutations per clone, both because this could allow for greater mutational coverage for any given library size, and because it would offer an opportunity to discover intragenic epistatic relationships between variants.  To fulfill these requirements, we developed a mutagenesis protocol (Precision Oligo-Pool based Code Alteration or POPCode) which generates random codon replacements. POPCode scales up a previously-described technique11 in which oligonucleotides carrying a central 3-base degenerate region are hybridized to a uracil-containing wild-type DNA template, with completion of the mutant strand via non-displacing DNA polymerase extension and ligation, followed by degradation of the wild-type template.  To accomplish mutagenesis across the entire coding region, we designed a tiled collection of oligos (one per codon) and applied POPCode to generate a codon-mutagenized amplicon library for UBE2I.  In parallel, we carried out PCR with oxidized nucleotides 12 to enable deeper representation of amino acid changes achievable from single-nucleotide changes.
 
-For Stage 2 of the framework—generation of a clone library—we employed an en masse recombinational cloning strategy to generate a Gateway Entry vector library of UBE2I variants (see Online Methods). This library was then transferred via en masse recombinational subcloning into a pool of randomly-barcoded plasmids enabling expression of UBE2I variants in yeast. The full-length sequence and barcode of each clone was established using a novel sequencing method called kiloSEQ which combines plate-position-specific index sequences with Illumina sequencing to carry out full-length sequencing for thousands of samples (see Online Methods). Based on sequence information, we retained clones that carried at least one amino acid substitution to generate a final library comprised of 6,553 UBE2I variants, covering different combinations of 1,848 (61\% of all possible) unique amino acid changes. Variant plasmids were pooled, together with empty vector and wild type control plasmids (see Online Methods).
+For Stage 2 of the framework---generation of a clone library---we employed an en masse recombinational cloning strategy to generate a Gateway Entry vector library of UBE2I variants (see Online Methods). This library was then transferred via en masse recombinational subcloning into a pool of randomly-barcoded plasmids enabling expression of UBE2I variants in yeast. The full-length sequence and barcode of each clone was established using a novel sequencing method called kiloSEQ which combines plate-position-specific index sequences with Illumina sequencing to carry out full-length sequencing for thousands of samples (see Online Methods). Based on sequence information, we retained clones that carried at least one amino acid substitution to generate a final library comprised of 6,553 UBE2I variants, covering different combinations of 1,848 (61\% of all possible) unique amino acid changes. Variant plasmids were pooled, together with empty vector and wild type control plasmids (see Online Methods).
 
 For Stage 3, the selection of clones encoding a functional protein, we employed a previously described S. cerevisiae functional complementation assay5,13. This assay is based a yeast strain carrying a temperature sensitive (ts) allele of the UBE2I orthologue UBC9, and on the observation that human UBE2I rescues growth at an otherwise lethal elevated temperature.  Despite a billion years of divergence, yeast functional complementation assays of human disease genes can accurately discriminate pathogenic from non-pathogenic variants5,13.  The plasmid library from Stage 3 was introduced into the appropriate ts strain by en-masse transformation. Pools were then grown over a period of 48 hours at the permissive (25°C) and selective (37°C) temperatures, respectively (see Online Methods).
 
 To read out the results of the selection (Stage 4), barcodes were sequenced at multiple timepoints to enable reconstruction of individual growth curves and normalized fitness quantification for each of the 6,553 strains. Functional complementation scores were calibrated so that a value of 0 corresponds to the mean fitness of the empty-vector control and a value of 1 corresponds to the average of wild type controls (see Online Methods).
-To assess the quality of complementation scores before further refinement in Stages 5 and 6, we first examined reproducibility of scores between technical replicates (Figure 1B, top panel), and biological replicates (different clones carrying the same mutation; Figure 1B, bottom panel).  In each case the scores were reproducible (Pearson’s R of 0.97 and 0.78, respectively).   To further examine score quality, we carried out semi-quantitative manual complementation spotting assays for a subset of mutants that spanned the range of fitness scores (see Supplementary Methods). Complementation scores from deep mutational scanning correlated well with these small-scale tests. Indeed, agreement between the large-scale and manual scores was about the same as agreement between internal replicates of the large-scale scores (Figure 1B,C). 
 
-As a further ‘sanity check’, we next examined evolutionary conservation and common predictors of deleteriousness, such as PolyPhen-23 and PROVEAN4.  Although these do not perfectly predict the functionality of amino acid changes5 —and may be particularly ill-suited for assessing amino acid changes that require multiple nucleotide substitutions in a given codon—they should nonetheless correlate with functionality.  Indeed, DMS-BarSeq fitness scores were significantly correlated with evolutionary conservation and PolyPhen-2 and PROVEAN scores (Figure 1D top panel, Supplementary Figure S1). Finally, we confirmed that, as expected, amino acid residues on the protein surface are more tolerant to mutation than those in the protein core or within interaction interfaces (Figure 1D, bottom panel).  Taken together, these observations support the biological relevance of the DMS-BarSeq approach.
 
 
 \subsubsection{POPCode: A Precision Oligo Pool Codon alteration mutagenesis method}
@@ -37,17 +35,55 @@ This method scales up a previously described method developed by Seyfang et al.1
 When finding a set of suitable oligonucleotide sequences, two important criteria need to be considered; 
 1) The melting temperature across the complete set is as uniform as possible as this will ensure a more even mutation rate across the ORF sequence; 2) the degenerate codon sequence should be located as close to the center of the oligo as permissible given the first criterium. To simplify the process of choosing an appropriate set of oligos based on these criteria I developed a web tool that can be used to calculate the optimal solution to the given problem. The tool merely requires the sequence of the target ORF and flanking vector sequences, a desired average oligo length and a maximum offset parameter. The offset parameter determines how many bases can be maximally added or removed from each side of a given oligo to optimize its melting temperature. 
 
+%%Figure: PopCode schema
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=\textwidth]{img/popcode_schema.pdf}%TODO: should be direct BP-LR cloning
+	\caption{POPCode mutagenesis and library generation. A pool of codon-denerate oligos is hybridized to a uracil-doped template, gaps between oligos are closed via non-strand-displacing polymerase and the backbone sealed. Uracil-doped template is degraded to enrich for mutants. After mutagenesis, Gateway attB sites are added, followed by BP+LR cloning into barcoded vectors and transformation into bacteria. Finally, colonies are picked and arrayed.}
+	\label{fig:popcode_schema}
+\end{figure}
+
+
 In the next step, the ORF sequence is PCR amplified in the presence of dUTP to generate uracil-doped template for the mutagenesis reaction. Oligonucleotide pools were then hybridized with the template. Gaps between hybridizations were filled and sealed with the non-strand-displacing Sulpholobus Polymerase IV. Following cleanup, the uracil-doped template was incapacitated using Uracil-DNA-Glycosylase (UDG). The mutagenesis product was then amplified with primers that added attB sites to allow Gateway BP cloning into entry vectors.
 
 \subsubsection{KiloSEQ: A highly multiplexed amiplicon sequencing method}
 
-To establish the identity of each plasmid barcode and its associated set of mutations in the target ORF we used kiloSEQ, which was developed in collaboration with SeqWell Inc., Boston. The ORF and barcode locus are in close proximity to each other on the plasmid. Thus we can amplify a smaller segment of the plasmid containing both for sequencing. This is done using a hydrocycler, allowing for thousands of PCR reactions to be performed in parallel. The primers used in these reactions contain well-specific tags allowing each well on each plate to be uniquely identified. Amplicons can then be plate-wise pools. In the next step, Nextera tagmentation using Tn5 transposase is used to break the amplicons into shotgun fragments and ligate them to Illumina sequencing linkers. We then re-amplify those fragments that contain the original well-specific tags. The resulting library is now ready for paired-end sequencing using Illumina NextSEQ 500, where each plate can be tagged with a unique Nextera sequence index. In each pair of reads, one read will contain the well tag and the barcode locus, whereas the other will contain a fragment of the mutant ORF.
+To establish the identity of each plasmid barcode and its associated set of mutations in the target ORF we used kiloSEQ, which was developed in collaboration with SeqWell Inc., Boston. The complementation vector is designed such that the variant ORF and the barcode locus are in close proximity to each other, so that only a relatively small segment of the plasmid needs to be amplified for sequencing. The primers used in these reactions contain well-specific tags allowing each well on each plate to be uniquely identified. In the next step, Nextera tagmentation using Tn5 transposase is used to break the amplicons into random fragments and simultaneously ligate them to Illumina sequencing linkers with plate-specific indices. We then re-amplify the pool with  3'-specific primers, to enrich for fragments that contain the well tags. The resulting library is now ready for paired-end sequencing. In each pair of reads, one read will contain the well tag and the barcode locus, whereas the other will contain a fragment of the mutant ORF.
+%TODO: move to methods: This is done using a hydrocycler, allowing for thousands of PCR reactions to be performed in parallel. ----- Amplicons can then be plate-wise pooled.
 
-We developed a sequence analysis pipeline to perform demultiplexing, barcode identification and genotyping. The pipeline source code is available upon request. In the first step Illumina bcl2fastq is used to demultiplex the reads at the plate level using the custom Nextera indices. The resulting FASTQ files are then further demultiplexed using the well-tags in a highly parallel fashion. This results in a folder structure containing tens of thousands of individual fastq files sorted by plate and well coordinate. These are then further processed in parallel to identify barcodes. Due to the limitations of the Biomatrix robot, wells can sometimes contain more than one clone. Thus barcode sequences are extracted from each read and then clustered by edit distance to determine the set of barcodes in each well. The associated paired reads for each barcodes are then further split by barcode. Each barcode-specific set of ORF reads can then be analyzed with respect to mutations. Bowtie2 software is used to align reads to the ORF template, PCR duplicates are removed and nucleotide variants called using samtools pileup. Due to the effects of the kiloSEQ PCR steps on read coverage, identification of longer indels is not straightforward. A solution was found by extracting depth of coverage tracks for each clone and normalizing them with respect to average positional coverage across each 384-well plate. Then, an edge-detection algorithm is used to find sudden increases or decreases within the normalized coverage, indicating the presence of insertions or deletions.
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=.5\textwidth]{img/kiloseq_schema_new.pdf}
+	\caption{KiloSEQ schema. 1) For each library well, amplicons containing the variant ORF (gold) and Barcode locus (green) are amplified with primers adding a well-specific tag. 2) Tn5 tagmentation fragments the DNA while simultaneously adding Illumina i5/i7 linkers. 3' re-amplification enriches for fragments containing the well tags. 3) Each pair of sequencing reads now contains a fragment of ORF sequence and the associated barcode and well tag.}
+	\label{fig:kiloseq_schema}
+\end{figure}
+
+To process the results of a KiloSEQ sequencing run, a special software pipeline was developed, which can be divided into three phases: Demultiplexing; Barcode clustering; and Alignment and variant calling.
+The first phase---demultiplexing---takes place on two levels, corresponding to library plates and the wells within those plates. The plate level of demultiplexing is automatically performed by Illumina's bcl2fastq software, which resolves i5-i7 index combinations. The second phase is performed on a high performance computing cluster. Sets of read pairs are distributed across computing nodes, where they are processed by worker scripts. The well-tag within each R2 read is identified using a k-mer search algorithm, and read-pairs are sorted accordingly into bins. Each bin corresponds to one well in a given plate. At the same time, barcode sequences are extracted from the R2 reads in preparation for the next phase. 
+
+The second phase---barcode clustering---uses the extracted barcode sequences within each bin and clusters them according to their Levenstein distance (i.e. the number of edit operations separating them). This step is necessary due to resolve possible contamination across wells that occurred during library preparation. Each barcode cluster corresponds to a different clone, and the concrete sequences within each clusters to different sequencing errors. The the most frequent sequence within each cluster is interpreted as the true barcode. Finally, read pairs within each bin are again subdivided according to their respective barcode cluster.
+
+The third phase---alignment and variant calling---is then executed for each barcode cluter within each well within each plate. The R1 reads are aligned to the template sequence and variants are called. This is complicated by the fact that KiloSEQ library preparation usually creates a certain amount of cross-contamination between wells. While single or multi-nucleotide variants are still relatively unproblematic to identify, standard tools were unable to identify copy number variations (CNVs) due to these problems. We thus developed a custom method for CNV detection, based on detecting sudden changes in read depth across the alignments. First the read depth is normalized to the average read depth across the plate. Then a one-dimensional Sobel operator is used to detect sharp edges in the signal.
+
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=\textwidth]{img/popcode_census.pdf}
+	\caption{KiloSEQ census of UBE2I POPCode library}
+	\label{fig:popcode_census}
+\end{figure}
+
 
 After successful genotyping with kiloseq, we determined the subset of clones that (i) contained a minimum of one missense mutation, (ii) did not contain any insertions or deletions, (iii) did not contain mutations outside of the ORF, (iii) had unique barcodes, (iv) had sufficient read coverage during kiloSEQ to allow for confident genotyping. Using the Biomatrix robot, we re-arrayed this filtered subset of clones into a condensed final library of 40 plates.
 
+%%Figure library coverage, census, and bias map
+
 \subsubsection{A barcoded-based functional map of UBE2I}
+
+To assess the quality of complementation scores before further refinement in Stages 5 and 6, we first examined reproducibility of scores between technical replicates (Figure 1B, top panel), and biological replicates (different clones carrying the same mutation; Figure 1B, bottom panel).  In each case the scores were reproducible (Pearson’s R of 0.97 and 0.78, respectively).   To further examine score quality, we carried out semi-quantitative manual complementation spotting assays for a subset of mutants that spanned the range of fitness scores (see Supplementary Methods). Complementation scores from deep mutational scanning correlated well with these small-scale tests. Indeed, agreement between the large-scale and manual scores was about the same as agreement between internal replicates of the large-scale scores (Figure 1B,C). 
+
+As a further ‘sanity check’, we next examined evolutionary conservation and common predictors of deleteriousness, such as PolyPhen-23 and PROVEAN4.  Although these do not perfectly predict the functionality of amino acid changes5 —and may be particularly ill-suited for assessing amino acid changes that require multiple nucleotide substitutions in a given codon—they should nonetheless correlate with functionality.  Indeed, DMS-BarSeq fitness scores were significantly correlated with evolutionary conservation and PolyPhen-2 and PROVEAN scores (Figure 1D top panel, Supplementary Figure S1). Finally, we confirmed that, as expected, amino acid residues on the protein surface are more tolerant to mutation than those in the protein core or within interaction interfaces (Figure 1D, bottom panel).  Taken together, these observations support the biological relevance of the DMS-BarSeq approach.
 
 \subsection{A complete functional map of UBE2I}
 
