--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,7 @@
 \newcommand{\gene}[1]{\textit{#1}}
 \newcommand{\species}[1]{\textit{#1}}
 \newcommand\todo[1]{\texttt{\textcolor{red}{\textbf{TODO:} #1}}}
+\newcommand{\celsius}{$^{\circ}$C}
 
 %% List only down to subsections in the table of contents;
 %% 0=chapter, 1=section, 2=subsection, 3=subsubsection, etc.
